[fix] 서버 배포에 따른 URL 변경 및 SSL 우회 기능 추가

--- a/presentation/src/main/res/layout/bottomsheet_card_detail.xml
+++ b/presentation/src/main/res/layout/bottomsheet_card_detail.xml
@@ -8,6 +8,10 @@
             name="cardDate"
             type="com.example.domain.model.remote.receive.card.CardDetailData" />
 
+        <variable
+            name="util"
+            type="com.example.domain.util.StringUtil" />
+
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
