--- a/presentation/src/main/res/layout/dialog_bill_check.xml
+++ b/presentation/src/main/res/layout/dialog_bill_check.xml
@@ -42,9 +42,9 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/pretendardbold"
-        android:text="청구 문구~~~"
+        android:text="청구 상태를 변경하시겠습니까?"
         android:textColor="@color/main_font_black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,8 +56,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
